--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,13 @@ jobs:
 
       - name: Run tests
         run: mvn test
+
+      - name: Run SpotBugs
+        run: mvn com.github.spotbugs:spotbugs-maven-plugin:check
+
+      - name: Run OWASP Dependency-Check
+        uses: OWASP/Dependency-Check-GitHub-Action@v8
+        with:
+          project: Lab1
+          scan: .
+          format: "ALL"
