--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,13 @@
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
                 <version>10.0.4</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <nvdApiKey>${nvd.apiKey}</nvdApiKey>
                     <failBuildOnCVSS>7</failBuildOnCVSS>
