--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>Lab1</name>
     <description>Information Security Lab1</description>
-    <url>https://github.com/Verteplushka/infosec-lab1</url>
+    <url/>
     <licenses>
         <license/>
     </licenses>
