--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
           OSS_INDEX_TOKEN: ${{ secrets.OSS_INDEX_TOKEN }}
         run: mvn org.owasp:dependency-check-maven:check -Dnvd.apiKey=${NVD_API_KEY} -Dossindex.user=${OSS_INDEX_USER} -Dossindex.token=${OSS_INDEX_TOKEN}
 
-      - name: Upload SpotBugs report (XML)
+      - name: Upload SpotBugs report
         uses: actions/upload-artifact@v4
         if: always()
         with:
